// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-center-start"
  style={
    Object {
      "paddingTop": "60px",
    }
  }
>
  <RouteHubBox
    locations={
      Object {
        "destination": Object {
          "city": "BAR_CITY",
          "country": "China",
          "street": "BAR_STREET",
          "street_number": 9,
          "zip_code": 845321,
        },
        "endHub": "FOO_END_HUB",
        "origin": Object {
          "city": "FOO_CITY",
          "country": "Germany",
          "street": "FOO_STREET",
          "street_number": 7,
          "zip_code": 21177,
        },
        "startHub": "FOO_START_HUB",
      }
    }
    shipment={
      Object {
        "cargo_notes": "FOO_CARGO_NOTES",
        "eori": 1234,
        "has_on_carriage": false,
        "has_pre_carriage": false,
        "incoterm_text": "FOO_INCOTERM_TEXT",
        "notes": "FOO_NOTES",
        "schedules_charges": Object {
          "BAR_HUB_ROUTE_KEY": Object {
            "total": 25,
          },
          "FOO_HUB_ROUTE_KEY": Object {
            "total": 7,
          },
        },
        "total_goods_value": Object {
          "currency": "USD",
          "value": 15,
        },
        "total_price": Object {
          "currency": "USD",
          "value": 12,
        },
      }
    }
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <div
    className="wrapper_contact_setter flex-100 layout-row"
  >
    <ContactSetter
      contacts={Array []}
      finishBookingAttempted={false}
      removeNotifyee={[Function]}
      setContact={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </div>
  <[object Object]
    className="flex-100"
    onInvalidSubmit={[Function]}
    onValidSubmit={[Function]}
  >
    <CargoDetails
      currencies={
        Array [
          Object {
            "key": "USD",
            "rate": 1.05,
          },
        ]
      }
      customsData={
        Object {
          "export": Object {
            "bool": false,
            "val": 0,
          },
          "import": Object {
            "bool": false,
            "val": 0,
          },
          "total": Object {
            "val": 0,
          },
        }
      }
      deleteCode={[Function]}
      finishBookingAttempted={false}
      handleChange={[Function]}
      handleHsTextChange={[Function]}
      handleInsurance={[Function]}
      handleTotalGoodsCurrency={[Function]}
      hsTexts={Object {}}
      insurance={
        Object {
          "bool": null,
          "val": 0,
        }
      }
      setCustomsFee={[Function]}
      setHsCode={[Function]}
      shipmentData={
        Object {
          "cargoItems": Array [],
          "contacts": Array [],
          "containers": Array [],
          "documents": Array [],
          "hubs": Object {},
          "locations": Object {
            "destination": Object {
              "city": "BAR_CITY",
              "country": "China",
              "street": "BAR_STREET",
              "street_number": 9,
              "zip_code": 845321,
            },
            "endHub": "FOO_END_HUB",
            "origin": Object {
              "city": "FOO_CITY",
              "country": "Germany",
              "street": "FOO_STREET",
              "street_number": 7,
              "zip_code": 21177,
            },
            "startHub": "FOO_START_HUB",
          },
          "schedules": Array [
            Object {
              "hub_route_key": "FOO_HUB_ROUTE_KEY",
            },
            Object {
              "hub_route_key": "BAR_HUB_ROUTE_KEY",
            },
          ],
          "shipment": Object {
            "cargo_notes": "FOO_CARGO_NOTES",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "incoterm_text": "FOO_INCOTERM_TEXT",
            "notes": "FOO_NOTES",
            "schedules_charges": Object {
              "BAR_HUB_ROUTE_KEY": Object {
                "total": 25,
              },
              "FOO_HUB_ROUTE_KEY": Object {
                "total": 7,
              },
            },
            "total_goods_value": Object {
              "currency": "USD",
              "value": 15,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 12,
            },
          },
        }
      }
      shipmentDispatch={
        Object {
          "toDashboard": [Function],
        }
      }
      tenant={
        Object {
          "data": Object {
            "id": 123,
            "subdomain": "foosubdomain",
            "theme": Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            },
          },
        }
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      toggleCustomsCredit={[Function]}
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
        }
      }
    />
    <div
      className="btn_sec flex-100 layout-row layout-wrap layout-align-center"
    >
      <div
        className="content_width flex-none  layout-row layout-wrap layout-align-start-center"
      >
        <div
          className="flex-50 layout-row layout-align-start-center"
        />
        <div
          className="flex-50 layout-row layout-align-end-center"
        >
          <div
            className="flex-none layout-row"
          >
            <RoundButton
              active={true}
              text="Review Booking"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <hr
      className="sec_break flex-100"
    />
    <div
      className="back_to_dash_sec flex-100 layout-row layout-wrap layout-align-center"
    >
      <div
        className="content_width flex-none content-width layout-row layout-align-start-center"
      >
        <RoundButton
          back={true}
          handleNext={[Function]}
          iconClass="fa-angle-left"
          text="Back to dashboard"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
    </div>
  </[object Object]>
</div>
`;

exports[`shipmentData is falsy 1`] = `""`;

exports[`shipmentData.shipment is falsy 1`] = `""`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-center-start"
  style={
    Object {
      "paddingTop": "60px",
    }
  }
>
  <div
    className="wrapper_contact_setter flex-100 layout-row"
  >
    <ContactSetter
      contacts={Array []}
      finishBookingAttempted={false}
      removeNotifyee={[Function]}
      setContact={[Function]}
      theme={null}
    />
  </div>
  <[object Object]
    className="flex-100"
    onInvalidSubmit={[Function]}
    onValidSubmit={[Function]}
  >
    <CargoDetails
      currencies={
        Array [
          Object {
            "key": "USD",
            "rate": 1.05,
          },
        ]
      }
      customsData={
        Object {
          "export": Object {
            "bool": false,
            "val": 0,
          },
          "import": Object {
            "bool": false,
            "val": 0,
          },
          "total": Object {
            "val": 0,
          },
        }
      }
      deleteCode={[Function]}
      finishBookingAttempted={false}
      handleChange={[Function]}
      handleHsTextChange={[Function]}
      handleInsurance={[Function]}
      handleTotalGoodsCurrency={[Function]}
      hsTexts={Object {}}
      insurance={
        Object {
          "bool": null,
          "val": 0,
        }
      }
      setCustomsFee={[Function]}
      setHsCode={[Function]}
      shipmentData={
        Object {
          "cargoItems": Array [],
          "contacts": Array [],
          "containers": Array [],
          "documents": Array [],
          "hubs": Object {},
          "locations": Object {
            "destination": Object {
              "city": "BAR_CITY",
              "country": "China",
              "street": "BAR_STREET",
              "street_number": 9,
              "zip_code": 845321,
            },
            "endHub": "FOO_END_HUB",
            "origin": Object {
              "city": "FOO_CITY",
              "country": "Germany",
              "street": "FOO_STREET",
              "street_number": 7,
              "zip_code": 21177,
            },
            "startHub": "FOO_START_HUB",
          },
          "schedules": Array [
            Object {
              "hub_route_key": "FOO_HUB_ROUTE_KEY",
            },
            Object {
              "hub_route_key": "BAR_HUB_ROUTE_KEY",
            },
          ],
          "shipment": Object {
            "cargo_notes": "FOO_CARGO_NOTES",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "incoterm_text": "FOO_INCOTERM_TEXT",
            "notes": "FOO_NOTES",
            "schedules_charges": Object {
              "BAR_HUB_ROUTE_KEY": Object {
                "total": 25,
              },
              "FOO_HUB_ROUTE_KEY": Object {
                "total": 7,
              },
            },
            "total_goods_value": Object {
              "currency": "USD",
              "value": 15,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 12,
            },
          },
        }
      }
      shipmentDispatch={
        Object {
          "toDashboard": [Function],
        }
      }
      tenant={
        Object {
          "data": Object {
            "id": 123,
            "subdomain": "foosubdomain",
            "theme": Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            },
          },
        }
      }
      theme={null}
      toggleCustomsCredit={[Function]}
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
        }
      }
    />
    <div
      className="btn_sec flex-100 layout-row layout-wrap layout-align-center"
    >
      <div
        className="content_width flex-none  layout-row layout-wrap layout-align-start-center"
      >
        <div
          className="flex-50 layout-row layout-align-start-center"
        />
        <div
          className="flex-50 layout-row layout-align-end-center"
        >
          <div
            className="flex-none layout-row"
          >
            <RoundButton
              active={true}
              text="Review Booking"
              theme={null}
            />
          </div>
        </div>
      </div>
    </div>
    <hr
      className="sec_break flex-100"
    />
    <div
      className="back_to_dash_sec flex-100 layout-row layout-wrap layout-align-center"
    >
      <div
        className="content_width flex-none content-width layout-row layout-align-start-center"
      >
        <RoundButton
          back={true}
          handleNext={[Function]}
          iconClass="fa-angle-left"
          text="Back to dashboard"
          theme={null}
        />
      </div>
    </div>
  </[object Object]>
</div>
`;
